logo: Fix size on mobile
With the new temporary logo, the logo would sometimes not be fully
visible on mobile (e.g. iPhone 5SE). With this change, the logo and
logo box are the same size, and the logo is small enough that it doesn't
push the "Get in touch" button down.

--- a/src/css/imports/footer.css
+++ b/src/css/imports/footer.css
@@ -34,7 +34,11 @@
 
     .logo-light {
       height: 57px;
-      width: 164px;
+      width: 100px;
+
+      @media screen and (min-width: 380px) {
+        width: 164px;
+      }
     }
 
     p {
